<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="80dp" >

    <EditText
        android:id="@+id/findusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/find_username_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/find_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/code_hint" />

        <Button
            android:id="@+id/find_gain_code"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/gain_code" />
    </LinearLayout>

    <EditText
        android:id="@+id/find_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/find_password1_text"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/find_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/find_password2_text"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/find_confirm_bt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/find_confirm"
        android:textSize="18sp" />

    <Button
        android:id="@+id/find_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:text="@string/back_to_login_text"
        android:textColor="@color/blue"
        android:textSize="20sp" />

</LinearLayout>