<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="50dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_succeed_tip1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/register_succeed_tip2" />

    <Button
        android:id="@+id/login_now"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" 
        android:text="@string/login_now_text"
        android:background="@drawable/button_bg"/>
    <Button
        android:id="@+id/login_otherway"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" 
         android:text="@string/login_otherway_text"
        />

</LinearLayout>